Fixes to conversion code.
Properly decodes and splits files.  Still having issues with encode.  Threads don't seem to be closing properly, as the program stays running after completion.

--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ task findbugs << {
 check.dependsOn findbugs
 
 task deploy(dependsOn: configurations.default.buildArtifacts, type: Copy) {
-	into '~/dist/library/lib'
+	into 'C:/data/library/lib'
 	from configurations.default
 	from configurations.default.allArtifactFiles
 }
