Refactoring to org.mulima.
All meta classes and most utility classes have been refactored now.

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply from: 'emma.gradle'
 
 defaultTasks 'build', 'javadoc'
 
-group = 'com.andrewoberstar'
+group = 'org.mulima'
 version = '0.1'
 
 checkstyleResultsDirName = 'reports/checkstyle'
