--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,8 @@ dependencies {
 	
 	testCompile(
 		[group:'junit', name:'junit', version:'4.8.2'],
-		[group:'org.mockito', name:'mockito-core', version:'1.8.5']
+		[group:'org.mockito', name:'mockito-core', version:'1.8.5'],
+		[group:'org.spockframework', name:'spock-core', version:'0.5-groovy-1.8']
 	)
 }
 
