--- a/build.gradle
+++ b/build.gradle
@@ -121,7 +121,7 @@ task pmd << {
 	ant {
 		taskdef(name:'pmd', classname:'net.sourceforge.pmd.ant.PMDTask', classpath: configurations.pmdConf.asPath)
 		mkdir(dir:'build/reports/pmd')
-		pmd(shortFilenames:'true', rulesetfiles:'rulesets/basic.xml,rulesets/braces.xml,rulesets/codesize.xml,rulesets/controversial.xml,rulesets/coupling.xml,rulesets/design.xml,rulesets/favorites.xml,rulesets/finalizers.xml,rulesets/imports.xml,rulesets/javabeans.xml,rulesets/junit.xml,rulesets/naming.xml,rulesets/optimizations.xml,rulesets/scratchpad.xml,rulesets/strictexception.xml,rulesets/strings.xml,rulesets/sunsecure.xml,rulesets/typeresolution.xml,rulesets/unusedcode.xml') {
+		pmd(shortFilenames:'true', rulesetfiles:'rulesets/basic.xml,rulesets/braces.xml,rulesets/codesize.xml,rulesets/controversial.xml,rulesets/coupling.xml,rulesets/design.xml,rulesets/favorites.xml,rulesets/finalizers.xml,rulesets/imports.xml,rulesets/javabeans.xml,rulesets/junit.xml,rulesets/naming.xml,rulesets/optimizations.xml,rulesets/strictexception.xml,rulesets/strings.xml,rulesets/sunsecure.xml,rulesets/typeresolution.xml,rulesets/unusedcode.xml') {
 			formatter(type:'xml', toFile:'build/reports/pmd/pmd_report.xml')
 			sourceSets.main.java.srcDirs.each {
 				fileset(dir: it) {
