--- a/build.gradle
+++ b/build.gradle
@@ -1,64 +1,45 @@
+buildscript {
+	repositories {
+		mavenCentral()
+		mavenRepo(name:'sonatype', urls:['https://oss.sonatype.org/content/groups/public/'])
+	}
+	dependencies {
+		classpath group:'org.ajoberstar', name:'gradle-plugins', version:'0.1.0.SNAPSHOT'
+	}
+}
+
 apply plugin: 'groovy'
 apply plugin: 'code-quality' 
+apply plugin: 'jdepend'
+apply plugin: 'pmd'
+apply plugin: 'findbugs'
 apply from: 'emma.gradle'
 
-defaultTasks 'build', 'javadoc'
+group = 'org.ajoberstar'
+version = '0.1.0.SNAPSHOT'
 
-group = 'org.mulima'
-version = '0.1'
-
-checkstyleResultsDirName = 'reports/checkstyle'
 checkstyleMain.ignoreFailures = true
 checkstyleTest.ignoreFailures = true
 
 codeNarcConfigFileName = 'config/codenarc/codenarc.groovy'
-codeNarcResultsDirName = 'reports/codenarc'
 
 repositories {
 	mavenCentral()
-	add(new org.apache.ivy.plugins.resolver.URLResolver()) {
-		name = 'com.springsource.repository.bundles.release'
-		addIvyPattern 'http://repository.springsource.com/ivy/bundles/release/[organisation]/[module]/[revision]/[artifact]-[revision].[ext]'
-		addArtifactPattern 'http://repository.springsource.com/ivy/bundles/release/[organisation]/[module]/[revision]/[artifact]-[revision].[ext]'
-	}
-	add(new org.apache.ivy.plugins.resolver.URLResolver()) {
-		name = 'com.springsource.repository.bundles.external'
-		addIvyPattern 'http://repository.springsource.com/ivy/bundles/external/[organisation]/[module]/[revision]/[artifact]-[revision].[ext]'
-		addArtifactPattern 'http://repository.springsource.com/ivy/bundles/external/[organisation]/[module]/[revision]/[artifact]-[revision].[ext]'
-	}
-}
-
-configurations {
-	findbugsConf
-	pmdConf
-	jdependConf
-}
-	
-spring = { name ->
-	def group = 'org.springframework'
-	return [group:"${group}", name:"${group}.${name}", version:'3.0.5.RELEASE', configuration:'compile']
-}
-slf4j = { name ->
-	return [group:'org.slf4j', name:"${name}", version:'1.6.1', transitive:'false']
-}
-logback = { name ->
-	return [group:'ch.qos.logback', name:"${name}", version:'0.9.24', transitive:'false']
 }
 
 dependencies {
 	compile (
-		slf4j('slf4j-api'),
-		spring('context'),
-		spring('beans'),
-		spring('jdbc'),
-		spring('transaction'),
+		[group:'org.slf4j', name:'slf4j-api', version:'1.6.2'],
+		[group:'org.springframwork', name:'spring-context', version:'3.0.5.RELEASE'],
+		[group:'org.springframwork', name:'spring-jdbc', version:'3.0.5.RELEASE'],
+		[group:'org.springframwork', name:'spring-transaction', version:'3.0.5.RELEASE'],
 		[group:'org.apache.commons', name:'commons-compress', version:'1.1']
 	)
 	
 	runtime (
-		slf4j('jcl-over-slf4j'),
-		logback('logback-classic'),
-		logback('logback-core'),
+		[group:'org.slf4j', name:'jcl-over-slf4j', version:'1.6.2'],
+		[group:'ch.qos.logback', name:'logback-classic', version:'0.9.28'],
+		[group:'ch.qos.logback', name:'logback-c', version:'0.9.28'],
 		[group:'mysql', name:'mysql-connector-java', version:'5.1.13']
 	)
 	
@@ -66,12 +47,12 @@ dependencies {
 		[group:'org.codehaus.groovy', name:'groovy-all', version:'1.7.5']
 	)
 	
-	findbugsConf (
+	findbugs (
 		[group:'com.google.code.findbugs', name:'findbugs', version:'1.3.9'],
 		[group:'com.google.code.findbugs', name:'findbugs-ant', version:'1.3.9']
 	)
 	
-	pmdConf (
+	pmd (
 		[group:'pmd', name:'pmd', version:'4.2.5']	
 	)
 	
@@ -80,7 +61,7 @@ dependencies {
 		[group:'emma', name:'emma_ant', version:'2.0.5312']
 	)
 	
-	jdependConf (
+	jdepend (
 		[group:'jdepend', name:'jdepend', version:'2.9.1'],
 		[group:'org.apache.ant', name:'ant-jdepend', version:'1.7.1']	
 	)
@@ -91,74 +72,9 @@ dependencies {
 	)
 }
 
-ant {
-	taskdef(name:'findbugs', classname:'edu.umd.cs.findbugs.anttask.FindBugsTask', classpath: configurations.findbugsConf.asPath)
-	findbugsJarFiles = configurations.findbugsConf.resolve()
-	
-	findbugsHome = 'NOT_FOUND'
-	findbugsJarFiles.each() { jarPath ->
-		if (jarPath.getName().matches(/findbugs-([0-9]\.)*jar/)) {
-			findbugsHome = jarPath.getParentFile().getCanonicalPath()
-		}
-	}
-	
-	findbugsSrc = ''
-	sourceSets.main.java.srcDirs.each {
-		findbugsSrc += it.getPath() + ';'
-	}
-	sourceSets.test.java.srcDirs.each {
-		findbugsSrc += it.getPath() + ';'
-	}
-}
-
-task findbugs << {
-	new File('build/reports/findbugs').mkdirs()
-	project(':').ant {
-		findbugs(home: '/opt/findbugs/findbugs', output:'xml', outputFile:'build/reports/findbugs/findbugs.xml', warningsProperty:'foundBugs') {
-			auxClasspath(path: configurations.runtime.asPath)
-			sourcePath(path: findbugsSrc)
-			"class"(location: 'build/classes')
-		}
-		fail(message:'FindBugs reported warnings.', if:'foundBugs')
-	}
-}
-
-task pmd << {
-	ant {
-		taskdef(name:'pmd', classname:'net.sourceforge.pmd.ant.PMDTask', classpath: configurations.pmdConf.asPath)
-		mkdir(dir:'build/reports/pmd')
-		pmd(shortFilenames:'true', rulesetfiles:'rulesets/basic.xml,rulesets/braces.xml,rulesets/codesize.xml,rulesets/controversial.xml,rulesets/coupling.xml,rulesets/design.xml,rulesets/favorites.xml,rulesets/finalizers.xml,rulesets/imports.xml,rulesets/javabeans.xml,rulesets/junit.xml,rulesets/naming.xml,rulesets/optimizations.xml,rulesets/strictexception.xml,rulesets/strings.xml,rulesets/sunsecure.xml,rulesets/typeresolution.xml,rulesets/unusedcode.xml') {
-			formatter(type:'xml', toFile:'build/reports/pmd/pmd_report.xml')
-			sourceSets.main.java.srcDirs.each {
-				fileset(dir: it) {
-					include(name:'**/*.java')
-				}
-			}
-			sourceSets.test.java.srcDirs.each {
-				fileset(dir: it) {
-					include(name:'**/*.java')
-				}
-			}
-		}
-	}
-}
-
-task jdepend << {
-	file("${buildDir}/reports/jdepend").mkdirs()
-	ant {
-		taskdef(name:'jdepend', classname:'org.apache.tools.ant.taskdefs.optional.jdepend.JDependTask', classpath:configurations.jdependConf.asPath)
-		jdepend(outputFile:"${buildDir}/reports/jdepend/jdepend-report.txt") {
-			classespath {
-				pathelement(location:'build')
-			}
-		}
-	}
-}
-
-check.dependsOn pmd, findbugs, jdepend
-
 task deploy(dependsOn: configurations.default.buildArtifacts, type: Copy) {
 	into 'C:/data/library/lib'
 	from configurations.default
 	from configurations.default.allArtifactFiles
 }
+
