--- a/build.gradle
+++ b/build.gradle
@@ -42,13 +42,15 @@ dependencies {
 		[group:'org.springframework', name:'spring-context', version:'3.0.5.RELEASE'],
 		[group:'org.springframework', name:'spring-jdbc', version:'3.0.5.RELEASE'],
 		[group:'org.springframework', name:'spring-tx', version:'3.0.5.RELEASE'],
-		[group:'org.apache.commons', name:'commons-compress', version:'1.1']
+		[group:'org.apache.commons', name:'commons-compress', version:'1.1'],
+		[group:'commons-codec', name:'commons-codec', version:'1.5']
 	)
 	
 	runtime (
 		[group:'org.slf4j', name:'jcl-over-slf4j', version:'1.6.1'],
 		[group:'ch.qos.logback', name:'logback-classic', version:'0.9.28'],
-		[group:'mysql', name:'mysql-connector-java', version:'5.1.13']
+		[group:'mysql', name:'mysql-connector-java', version:'5.1.13'],
+		[group:'commons-cli', name:'commons-cli', version:'1.2']
 	)
 	
 	groovy (
