--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 	)
 	
 	groovy (
-		[group:'org.codehaus.groovy', name:'groovy-all', version:'1.7.5']
+		[group:'org.codehaus.groovy', name:'groovy-all', version:'1.8.2']
 	)
 	
 	findbugs (
@@ -78,7 +78,8 @@ dependencies {
 	
 	testCompile(
 		[group:'junit', name:'junit', version:'4.8.2'],
-		[group:'org.mockito', name:'mockito-core', version:'1.8.5']
+		[group:'org.mockito', name:'mockito-core', version:'1.8.5'],
+		[group:'org.spockframework', name:'spock-core', version:'0.5-groovy-1.8']
 	)
 }
 
