--- a/build.gradle
+++ b/build.gradle
@@ -56,28 +56,14 @@ dependencies {
 		[group:'commons-cli', name:'commons-cli', version:'1.2']
 	)
 	
-	groovy (
-		[group:'org.codehaus.groovy', name:'groovy-all', version:'1.8.2']
-	)
-	
-	findbugs (
-		[group:'com.google.code.findbugs', name:'findbugs', version:'1.3.9'],
-		[group:'com.google.code.findbugs', name:'findbugs-ant', version:'1.3.9']
-	)
-	
-	pmd (
-		[group:'pmd', name:'pmd', version:'4.2.5']	
-	)
-	
-	emma (
-		[group:'emma', name:'emma', version:'2.0.5312'],
-		[group:'emma', name:'emma_ant', version:'2.0.5312']
-	)
-	
-	jdepend (
-		[group:'jdepend', name:'jdepend', version:'2.9.1'],
-		[group:'org.apache.ant', name:'ant-jdepend', version:'1.7.1']	
-	)
+	groovy 'org.codehaus.groovy:groovy-all:1.8.2'
+	findbugs 'com.google.code.findbugs:findbugs:1.3.9'
+	findbugs 'com.google.code.findbugs:findbugs-ant:1.3.9'
+	pmd 'pmd:pmd:4.2.5'	
+	emma 'emma:emma:2.0.5312'
+	emma 'emma:emma_ant:2.0.5312'
+	jdepend 'jdepend:jdepend:2.9.1'
+	jdepend 'org.apache.ant:ant-jdepend:1.7.1'	
 	
 	testCompile(
 		[group:'junit', name:'junit', version:'4.8.2'],
@@ -86,9 +72,7 @@ dependencies {
 		[group:'org.spockframework', name:'spock-core', version:'0.6-groovy-1.8-SNAPSHOT']
 	)
 	
-	testRuntime(
-		[group:'cglib', name:'cglib-nodep', version:'2.2.2']	
-	)
+	testRuntime 'cglib:cglib-nodep:2.2.2'	
 }
 /*
 task stageLib(type:Sync, dependsOn:assemble) {
