--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'eclipse'
 apply from: 'emma.gradle'
 
 group = 'org.ajoberstar'
-version = '0.1.0'
+version = '0.1.1-SNAPSHOT'
 
 applicationName = 'mulima'
 mainClassName = 'org.mulima.main.Mulima'
