--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,7 @@
-buildscript {
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath group:'org.ajoberstar', name:'gradle-plugins', version:'0.1.1'
-	}
-}
-
 apply plugin: 'groovy'
 apply plugin: 'application'
-apply plugin: 'code-quality' 
+apply plugin: 'checkstyle'
+apply plugin: 'codenarc' 
 apply plugin: 'jdepend'
 apply plugin: 'pmd'
 apply plugin: 'findbugs'
@@ -17,7 +9,7 @@ apply plugin: 'eclipse'
 apply from: 'emma.gradle'
 
 group = 'org.ajoberstar'
-version = '0.1.1-SNAPSHOT'
+version = '0.1.1'
 
 applicationName = 'mulima'
 mainClassName = 'org.mulima.main.Mulima'
@@ -30,18 +22,14 @@ tasks.withType(VerificationTask) {
 	}
 }
 
-codeNarcConfigFileName = 'config/codenarc/codenarc.groovy'
+codenarc.configFile = file('config/codenarc/codenarc.groovy')
 
-convention.plugins.pmd.rulesets 'config/pmd/rulesets.xml'
+//convention.plugins.pmd.rulesets 'config/pmd/rulesets.xml'
 
 repositories {
 	mavenCentral()
-	maven {
-		url = 'http://m2repo.spockframework.org/releases'
-	}
-	maven {
-		url = 'http://m2repo.spockframework.org/snapshots'
-	}
+	maven { url = 'http://m2repo.spockframework.org/releases' }
+	maven { url = 'http://m2repo.spockframework.org/snapshots' }
 }
 
 dependencies {
@@ -58,13 +46,8 @@ dependencies {
 	runtime 'commons-cli:commons-cli:1.2'
 	
 	groovy 'org.codehaus.groovy:groovy-all:1.8.5'
-	findbugs 'com.google.code.findbugs:findbugs:1.3.9'
-	findbugs 'com.google.code.findbugs:findbugs-ant:1.3.9'
-	pmd 'pmd:pmd:4.3'	
 	emma 'emma:emma:2.1.5320'
-	emma 'emma:emma_ant:2.1.5320'
-	jdepend 'jdepend:jdepend:2.9.1'
-	jdepend 'org.apache.ant:ant-jdepend:1.8.2'	
+	emma 'emma:emma_ant:2.1.5320'	
 	
 	testCompile 'junit:junit:4.10'
 	testCompile 'org.mockito:mockito-core:1.9.0'
