--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	runtime 'org.slf4j:jcl-over-slf4j:1.7.7'
 	runtime 'ch.qos.logback:logback-classic:1.1.2'
 
+	// math
+	compile 'org.spire-math:spire_2.11:0.7.4'
+
 	// spring
 	compile 'org.springframework:spring-context:4.0.4.RELEASE'
 	compile 'org.springframework:spring-jdbc:4.0.4.RELEASE'
