--- a/build.gradle
+++ b/build.gradle
@@ -1,53 +1,49 @@
-apply plugin: 'groovy'
-apply plugin: 'application'
+plugins {
+  id 'org.ajoberstar.defaults' version '0.7.2'
+  id 'groovy'
+  id 'application'
+}
 
 group = 'org.ajoberstar'
-version = '0.1.2-SNAPSHOT'
 
 applicationName = 'mulima'
 mainClassName = 'org.mulima.main.Mulima'
 
-sourceCompatibility = '1.7'
+sourceCompatibility = '1.8'
 
-repositories { mavenCentral() }
-
-dependencies {
-	compile 'org.slf4j:slf4j-api:1.6.4'
-	compile 'org.springframework:spring-context:3.1.0.RELEASE'
-	compile 'org.springframework:spring-jdbc:3.1.0.RELEASE'
-	compile 'org.springframework:spring-tx:3.1.0.RELEASE'
-	compile 'org.apache.commons:commons-compress:1.3'
-	compile 'commons-codec:commons-codec:1.6'
-
-	runtime 'org.slf4j:jcl-over-slf4j:1.6.4'
-	runtime 'ch.qos.logback:logback-classic:1.0.0'
-	runtime 'mysql:mysql-connector-java:5.1.18'
-	runtime 'commons-cli:commons-cli:1.2'
-
-	compile 'org.codehaus.groovy:groovy-all:1.8.5'
-
-	testCompile 'junit:junit:4.10'
-	testCompile 'org.mockito:mockito-core:1.9.0'
-	testCompile 'org.spockframework:spock-core:0.6-groovy-1.8'
-
-	testRuntime 'cglib:cglib-nodep:2.2.2'
+repositories {
+  mavenCentral()
 }
 
-jar {
-	manifest {
-		attributes 'Implementation-Title':'Mulima'
-		attributes 'Implementation-Version':version
-	}
+dependencies {
+	compile 'org.slf4j:slf4j-api:1.7.22'
+	compile 'org.springframework:spring-context:4.3.5.RELEASE'
+	compile 'org.springframework:spring-jdbc:4.3.5.RELEASE'
+	compile 'org.springframework:spring-tx:4.3.5.RELEASE'
+	compile 'org.apache.commons:commons-compress:1.13'
+	compile 'commons-codec:commons-codec:1.10'
+
+	runtime 'org.slf4j:jcl-over-slf4j:1.7.22'
+	runtime 'ch.qos.logback:logback-classic:1.1.8'
+	runtime 'mysql:mysql-connector-java:6.0.5'
+
+	compile 'org.codehaus.groovy:groovy-all:2.4.7'
+  compile 'commons-cli:commons-cli:1.3.1'
+
+	testCompile 'junit:junit:4.12'
+	testCompile 'org.mockito:mockito-core:2.5.5'
+	testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+	testRuntime 'cglib:cglib:3.2.4'
+}
+
+model {
+  bintray {
+    owner = 'ajoberstar'
+    repo = 'maven'
+    pkg = 'mulima'
+  }
 }
 
 test {
 	systemProperties 'log.level':'DEBUG'
-}
-
-task deploy(type: Sync) {
-	with distributions.main.contents
-	from('/usr/local/opt/mulima') {
-		include 'config/*'
-	}
-	into '/usr/local/opt/mulima'
 }
