--- a/build.gradle
+++ b/build.gradle
@@ -12,24 +12,22 @@ repositories {
 }
 
 dependencies {
+  // core
   compile 'org.clojure:clojure:1.9.0-RC1'
   compile 'org.clojure:spec.alpha:0.1.143'
   compile 'org.clojure:core.async:0.3.443'
+
+  // utils
   compile 'org.clojure:tools.logging:0.4.0'
-
   compile 'org.ajoberstar:ike.cljj:0.3.0'
-  compile 'com.rpl:specter:1.0.2'
-  compile 'commons-codec:commons-codec:1.10'
-
   compile 'me.raynes:conch:0.8.0'
-  compile 'org.clojure:data.xml:0.0.8'
 
+  // data
   compile 'com.h2database:h2:1.4.196'
-  compile 'org.clojure:java.jdbc:0.7.0-beta5'
-  compile 'honeysql:honeysql:0.9.0'
+  compile 'org.clojure:java.jdbc:0.7.3'
+  compile 'yesql:yesql:0.5.3'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.clojure:test.check:0.9.0'
 
   devCompile 'org.clojure:tools.namespace:0.3.0-alpha4'
   devCompile 'proto-repl:proto-repl:0.3.1'
