--- a/build.gradle
+++ b/build.gradle
@@ -16,19 +16,25 @@ dependencies {
   compile 'org.clojure:clojure:1.9.0-RC1'
   compile 'org.clojure:spec.alpha:0.1.143'
   compile 'org.clojure:core.async:0.3.443'
+  compile 'com.stuartsierra:component:0.3.2'
+
+  // loggin
+  compile 'org.clojure:tools.logging:0.4.0'
+  compile 'org.slf4j:slf4j-api:1.7.25'
+  compile 'org.slf4j:slf4j-simple:1.7.25'
 
   // utils
-  compile 'org.clojure:tools.logging:0.4.0'
   compile 'org.ajoberstar:ike.cljj:0.3.0'
   compile 'me.raynes:conch:0.8.0'
 
   // data
-  compile 'com.h2database:h2:1.4.196'
-  compile 'org.clojure:java.jdbc:0.7.3'
-  compile 'yesql:yesql:0.5.3'
+  compile 'com.datomic:datomic-free:0.9.5561.62'
 
+  // test
   testCompile 'junit:junit:4.12'
 
+  // repl
   devCompile 'org.clojure:tools.namespace:0.3.0-alpha4'
+  devCompile 'com.stuartsierra:component.repl:0.2.0'
   devCompile 'proto-repl:proto-repl:0.3.1'
 }
