--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 plugins {
   id 'gradle-clojure.clojure' version '0.3.0'
   id 'org.ajoberstar.reckon' version '0.2.1'
+  id 'org.ajoberstar.grgit' version '2.0.0'
+}
+
+reckon {
+  normal = scopeFromProp()
+  preRelease = stageFromProp('milestone', 'rc')
 }
 
 repositories {
