--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,52 @@
 plugins {
-  id 'org.ajoberstar.defaults' version '0.7.3'
-  id 'groovy'
   id 'application'
+  id 'org.ajoberstar.grgit' version '3.0.0'
+  id 'org.ajoberstar.reckon' version '0.9.0'
+  id 'com.diffplug.gradle.spotless' version '3.16.0'
 }
+
+apply from: 'gradle/locking.gradle'
 
 group = 'org.ajoberstar'
 
-applicationName = 'mulima'
 mainClassName = 'org.mulima.main.Mulima'
+sourceCompatibility = 11
 
-sourceCompatibility = '1.8'
+reckon {
+  scopeFromProp()
+  stageFromProp('beta', 'rc', 'final')
+}
 
 repositories {
   mavenCentral()
 }
 
 dependencies {
-  compile 'org.slf4j:slf4j-api:1.7.22'
-  compile 'org.springframework:spring-context:4.3.5.RELEASE'
-  compile 'commons-codec:commons-codec:1.10'
+  implementation 'org.slf4j:slf4j-api:1.7.22'
+  implementation 'org.springframework:spring-context:4.3.5.RELEASE'
+  implementation 'commons-codec:commons-codec:1.10'
 
-  runtime 'org.slf4j:jcl-over-slf4j:1.7.22'
-  runtime 'ch.qos.logback:logback-classic:1.1.8'
+  runtimeOnly 'org.slf4j:jcl-over-slf4j:1.7.22'
+  runtimeOnly 'ch.qos.logback:logback-classic:1.1.8'
 
-  compile 'org.codehaus.groovy:groovy-all:2.4.7'
-  compile 'commons-cli:commons-cli:1.3.1'
+  implementation 'org.codehaus.groovy:groovy-all:2.4.7'
+  implementation 'commons-cli:commons-cli:1.3.1'
 
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.mockito:mockito-core:2.5.5'
-  testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
-  testRuntime 'cglib:cglib:3.2.4'
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-core:2.5.5'
+  testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
+  testRuntimeOnly 'cglib:cglib:3.2.4'
 }
 
-model {
-  bintray {
-    owner = 'ajoberstar'
-    repo = 'maven'
-    pkg = 'mulima'
+
+spotless {
+  java {
+    importOrder 'java', 'javax', ''
+    removeUnusedImports()
+    eclipse().configFile(project.rootProject.file('gradle/eclipse-java-formatter.xml'))
   }
-}
-
-test {
-  systemProperties 'log.level':'DEBUG'
+  groovyGradle {
+    target '**/*.gradle'
+    greclipse().configFile(project.rootProject.file('gradle/eclipse-java-formatter.xml'))
+  }
 }
