--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
   id 'application'
-  id 'groovy'
   id 'org.ajoberstar.grgit' version '3.0.0'
   id 'org.ajoberstar.reckon' version '0.9.0'
   id 'com.diffplug.gradle.spotless' version '3.16.0'
@@ -21,22 +20,20 @@ reckon {
 repositories { mavenCentral() }
 
 dependencies {
-  implementation 'org.slf4j:slf4j-api:1.7.22'
-  implementation 'org.springframework:spring-context:4.3.5.RELEASE'
-  implementation 'commons-codec:commons-codec:1.10'
+  implementation 'org.slf4j:slf4j-api:latest.release'
+  implementation 'org.springframework:spring-context:latest.release'
+  implementation 'commons-codec:commons-codec:latest.release'
 
-  runtimeOnly 'org.slf4j:jcl-over-slf4j:1.7.22'
-  runtimeOnly 'ch.qos.logback:logback-classic:1.1.8'
+  runtimeOnly 'org.slf4j:jcl-over-slf4j:latest.release'
+  runtimeOnly 'ch.qos.logback:logback-classic:latest.release'
 
-  implementation 'org.codehaus.groovy:groovy-all:2.4.7'
-  implementation 'commons-cli:commons-cli:1.3.1'
+  implementation 'commons-cli:commons-cli:latest.release'
 
-  testImplementation 'junit:junit:4.12'
-  testImplementation 'org.mockito:mockito-core:2.5.5'
-  testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
-  testRuntimeOnly 'cglib:cglib:3.2.4'
+  testImplementation 'junit:junit:latest.release'
+  testImplementation 'org.mockito:mockito-core:latest.release'
+  testImplementation 'org.spockframework:spock-core:latest.release'
+  testRuntimeOnly 'cglib:cglib:latest.release'
 }
-
 
 spotless {
   java {
