--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   id 'org.ajoberstar.grgit' version '3.0.0'
   id 'org.ajoberstar.reckon' version '0.9.0'
   id 'com.diffplug.gradle.spotless' version '3.16.0'
+  id 'org.sonarqube' version '2.6.2'
 }
 
 apply from: 'gradle/locking.gradle'
