--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-bin/
-build/
-.gradle/
-.project
-.classpath
-.settings/
-gradle.properties
+# Gradle
+/build/
+/.gradle/
+
+# Eclipse
+/bin/
+/.project
+/.classpath
+/.settings/
