--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 plugins {
-  id 'gradle-clojure.clojure' version '0.3.0'
-  id 'org.ajoberstar.reckon' version '0.2.1'
-  id 'org.ajoberstar.grgit' version '2.0.0'
+  id 'gradle-clojure.clojure' version '0.5.0-alpha.1'
+  id 'org.ajoberstar.reckon' version '0.9.0'
+  id 'org.ajoberstar.grgit' version '3.0.0'
 }
 
+apply from: 'gradle/locking.gradle'
+
+group = 'org.ajoberstar.mulima'
+
 reckon {
-  normal = scopeFromProp()
-  preRelease = stageFromProp('milestone', 'rc')
+  scopeFromProp()
+  stageFromProp('alpha', 'beta', 'rc')
 }
 
 repositories {
@@ -19,28 +23,27 @@ repositories {
 
 dependencies {
   // core
-  compile 'org.clojure:clojure:1.9.0-RC1'
-  compile 'org.clojure:spec.alpha:0.1.143'
-  compile 'org.clojure:core.async:0.3.443'
-  compile 'com.stuartsierra:component:0.3.2'
+  compile 'org.clojure:clojure:latest.release'
+  compile 'org.clojure:spec.alpha:latest.release'
+  compile 'org.clojure:core.async:latest.release'
+  compile 'com.stuartsierra:component:latest.release'
 
   // loggin
-  compile 'org.clojure:tools.logging:0.4.0'
-  compile 'org.slf4j:slf4j-api:1.7.25'
-  compile 'ch.qos.logback:logback-classic:1.2.3'
+  compile 'org.clojure:tools.logging:latest.release'
+  compile 'org.slf4j:slf4j-api:latest.release'
+  compile 'ch.qos.logback:logback-classic:latest.release'
 
   // utils
-  compile 'org.ajoberstar:ike.cljj:0.3.0'
-  compile 'me.raynes:conch:0.8.0'
+  compile 'org.ajoberstar:ike.cljj:latest.release'
+  compile 'me.raynes:conch:latest.release'
 
   // data
-  compile 'com.datomic:datomic-free:0.9.5561.62'
+  compile 'com.datomic:datomic-free:latest.release'
 
   // test
-  testCompile 'junit:junit:4.12'
+  testCompile 'junit:junit:latest.release'
 
   // repl
-  devCompile 'org.clojure:tools.namespace:0.3.0-alpha4'
-  devCompile 'com.stuartsierra:component.repl:0.2.0'
-  devCompile 'proto-repl:proto-repl:0.3.1'
+  devCompile 'org.clojure:tools.namespace:latest.release'
+  devCompile 'com.stuartsierra:component.repl:latest.release'
 }
