--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
   implementation 'org.apache.logging.log4j:log4j-api:latest.release'
   runtimeOnly 'org.apache.logging.log4j:log4j-core:latest.release'
   runtimeOnly 'org.apache.logging.log4j:log4j-jcl:latest.release'
+  runtimeOnly 'com.lmax:disruptor:latest.release'
 
   implementation 'org.springframework:spring-context:latest.release'
   implementation 'commons-codec:commons-codec:latest.release'
