--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ javafx {
   version = '11.0.1'
   modules = [
     'javafx.controls',
-    'javafx.fxml'
+    'javafx.fxml',
+    'javafx.web'
   ]
 }
 
