--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,10 @@ reckon {
 
 javafx {
   version = '11.0.1'
-  modules = ['javafx.controls', 'javafx.web']
+  modules = [
+    'javafx.controls',
+    'javafx.web'
+  ]
 }
 
 repositories { mavenCentral() }
