--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,10 @@ dependencies {
   implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:latest.release'
 }
 
+tasks.withType(JavaCompile) {
+  options.encoding = "UTF-8"
+}
+
 spotless {
   java {
     importOrder 'java', 'javax', ''
